src/pages/login/Login.css
.container {
	display: flex;
	flex: 1;
	background-color: #00528f;
	justify-content: space-around;
	align-content: center;
	flex-direction: column;
	height: 100%;
}

.image-background {
	width: 100%;
	height: inherit;
	position: fixed;
	image-rendering: crisp-edges;
	/*The scaling is to achieve the same result as in the 
	mockup but without the need to import a cropped image, which
	doesn't work on mobile devices*/
	transform: scale(2, 2);
	overflow: hidden;
}

.header {
	color: #dbfe87;
	text-align: left;
	font-size: 5rem;
	align-self: center;
	z-index: 1;
}

p {
	color: #dbfe87;
	text-shadow: 10px, #121212;
	text-align: left;
	max-width: 600px;
	align-self: center;
	word-wrap: break-word;
	font-family: "Raleway Regular";
	font-size: large;
	text-shadow: 2px 2px 2px #121212;
	z-index: 1;
}

@media screen and (max-width: 460px) {
	.container {
		min-width: 280px;
	}
	.header {
		font-size: 3rem;
		max-width: 240px;
	}

	p {
		max-width: 240px;
	}

	.image-background {
		width: min-content;
		height: 100%;
		transform: translate(-20%, 30%);
		position: absolute;
		resize: inherit;
	}
}

